GNOME Bugzilla – Bug 740387
[REGRESSION] videoscale: The port to the new scaling API broke some file playback
Last modified: 2015-08-28 18:27:41 UTC
Steps to reproduce: $ wget http://archive.org/download/gst_qa_assets/SHA256E-s3820040--ca0f5e1c52865b2d9091cbb8341d36a49cf0b010467589503f8a711c85cca432.avi $ gst-launch-1.0 playbin uri=file://$PWD/SHA256E-s3820040--ca0f5e1c52865b2d9091cbb8341d36a49cf0b010467589503f8a711c85cca432.avi Then you can see several ERROR message of the form: 0:00:00.383378887 28985 0x7f764401f990 ERROR videobalance gstvideobalance.c:466:gst_video_balance_set_info:<videobalance> unknown format video/x-raw, format=(string)YUV9, width=(int)160, height=(int)120, pixel-aspect-ratio=(fraction)1/1, interlace-mode=(string)progressive, chroma-site=(string)jpeg, colorimetry=(string)bt601, framerate=(fraction)1000000/83333 And an Internal data stream error on the bus Reverting: commit 835422b2ea3fafd31e32b05627d90be5ca2f403c Author: Wim Taymans <wtaymans@redhat.com> Date: Fri Oct 24 17:08:43 2014 +0200 videoscale: port to new API makes that working again.
Regression: blocker for 1.6
looks like a bug in videobalance, it says it accepts all formats but then fails to handle YUV9.
commit e95da8410f315b52c049137a528a957b20776631 Author: Wim Taymans <wtaymans@redhat.com> Date: Thu Nov 20 09:01:38 2014 +0100 videobalance: fix unhandled format in passthrough In passthrough we can handle all formats. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=740387